chore(databend):code tidying and local optimization