@@ -3,7 +3,6 @@ package sqlancer.databend.test;
 import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.sql.Statement;
-import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -48,15 +47,14 @@ public class DatabendNoRECOracle extends NoRECBase<DatabendGlobalState> implemen
         DatabendTables randomTables = s.getRandomTableNonEmptyTables(); // 随机获得nr张表
         List<DatabendColumn> columns = randomTables.getColumns();
         DatabendNewExpressionGenerator gen = new DatabendNewExpressionGenerator(state).setColumns(columns);
-
-        Node<DatabendExpression> randomWhereCondition = gen.generateExpression(DatabendDataType.BOOLEAN); // 生成随机where条件，形式为ast
-
+        Node<DatabendExpression> randomWhereCondition = gen.generateExpression(DatabendDataType.BOOLEAN); // 生成随机where条件
         List<DatabendTable> tables = randomTables.getTables();
         List<TableReferenceNode<DatabendExpression, DatabendTable>> tableList = tables.stream()
                 .map(t -> new TableReferenceNode<DatabendExpression, DatabendTable>(t)).collect(Collectors.toList());
         List<Node<DatabendExpression>> joins = DatabendJoin.getJoins(tableList, state);
-        int secondCount = getSecondQuery(tableList.stream().collect(Collectors.toList()), randomWhereCondition, joins); // 禁用优化
-        int firstCount = getFirstQueryCount(con, tableList.stream().collect(Collectors.toList()), columns,
+        int secondCount = getUnoptimizedQueryCount(tableList.stream().collect(Collectors.toList()),
+                randomWhereCondition, joins);
+        int firstCount = getOptimizedQueryCount(con, tableList.stream().collect(Collectors.toList()), columns,
                 randomWhereCondition, joins);
         if (firstCount == -1 || secondCount == -1) {
             throw new IgnoreMeException();
@@ -67,23 +65,20 @@ public class DatabendNoRECOracle extends NoRECBase<DatabendGlobalState> implemen
         }
     }
 
-    private int getSecondQuery(List<Node<DatabendExpression>> tableList, Node<DatabendExpression> randomWhereCondition,
-            List<Node<DatabendExpression>> joins) throws SQLException {
+    private int getUnoptimizedQueryCount(List<Node<DatabendExpression>> tableList,
+            Node<DatabendExpression> randomWhereCondition, List<Node<DatabendExpression>> joins) throws SQLException {
         DatabendSelect select = new DatabendSelect();
         // select.setGroupByClause(groupBys);
-        // DatabendExpression isTrue = DatabendPostfixOperation.create(randomWhereCondition,
-        // PostfixOperator.IS_TRUE);
         Node<DatabendExpression> asText = new NewPostfixTextNode<>(new DatabendCastOperation(
                 new NewPostfixTextNode<DatabendExpression>(randomWhereCondition,
                         " IS NOT NULL AND " + DatabendToStringVisitor.asString(randomWhereCondition)),
                 new DatabendCompositeDataType(DatabendDataType.INT, 8)), "as count");
 
-        select.setFetchColumns(Arrays.asList(asText)); // ?
+        select.setFetchColumns(List.of(asText));
         select.setFromList(tableList);
         select.setJoinList(joins);
         int secondCount = 0;
         unoptimizedQueryString = "SELECT SUM(count) FROM (" + DatabendToStringVisitor.asString(select) + ") as res";
-        errors.add("canceling statement due to statement timeout");
         SQLQueryAdapter q = new SQLQueryAdapter(unoptimizedQueryString, errors);
         SQLancerResultSet rs;
         try {
@@ -101,17 +96,14 @@ public class DatabendNoRECOracle extends NoRECBase<DatabendGlobalState> implemen
         return secondCount;
     }
 
-    private int getFirstQueryCount(SQLConnection con, List<Node<DatabendExpression>> tableList,
+    private int getOptimizedQueryCount(SQLConnection con, List<Node<DatabendExpression>> tableList,
             List<DatabendColumn> columns, Node<DatabendExpression> randomWhereCondition,
             List<Node<DatabendExpression>> joins) throws SQLException {
         DatabendSelect select = new DatabendSelect();
         // select.setGroupByClause(groupBys);
-        // DatabendAggregate aggr = new DatabendAggregate(
         List<Node<DatabendExpression>> allColumns = columns.stream()
                 .map((c) -> new ColumnReferenceNode<DatabendExpression, DatabendColumn>(c))
                 .collect(Collectors.toList());
-        // DatabendAggregateFunction.COUNT);
-        // select.setFetchColumns(Arrays.asList(aggr));
         select.setFetchColumns(allColumns);
         select.setFromList(tableList);
         select.setWhereClause(randomWhereCondition);
